--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale-scale=1.0">
 	<title>Diseñador Freelancer</title>
+	<link rel="preload" href="css/styles.css" as="style">
+	<link href="css/styles.css" rel="stylesheet">
+
 </head>
+<!--https://tablericons.com/ Iconos para este proyecto-->
 <body>
 	<header>
 		<h1>Alberto Romero - Freelancer</h1>
